# DS223_Group_Project

./: .gitignore  404.html  _quarto.yml  index.html  index.qmd  mkdocs.yml  objects.inv  presentation.html  render.sh  sitemap.xml  slides.qmd
.github/workflows/: ci.yaml  sync-tutorial.yaml
api/: index.html
api_models/: index.html
app/: .env  docker-compose.yaml  index.html
app/backend/: Dockerfile  __init__.py  main.py  pyproject.toml
app/backend/api/: .env
app/backend/db/: crud.py  database.py  models.py  schemas.py
app/backend/routes/: __init__.py  carousels.py  interactions.py  system.py
app/ds/: README.md  __init__.py  pyproject.toml
app/etl/: create_tables.py  etl.py
app/front/: Dockerfile  bandit_utils.py  main.py  pyproject.toml
app/front/pages/: Analytics.py  Create_Carousels.py  Interaction.py
demo/: index.html
docs/: api.md  api_models.md  app.md  backend.md  data-science.md  demo.md  deployment.md  etl.md  frontend.md  index.html  index.md  search.json
docs/content/: 01_docker.html  01_problem_definition.html  01_problem_definition.md  02_database.html  02_docker.html  02_docker.md  03_frontend.html  03_git.html  03_git.md  04_backend.html  04_database.html  04_database.md  05_frontend.html  05_frontend.md  06_backend.html  06_backend.md  (+1 more)
etl/: index.html
github_project_manager/: .env  GitHubHandler.py  cleanup.py  config.py  create_labels.py  projects_setup.py  run_labels.py  tasks.env  tasks.py  test.py
slides/: _quarto.yml  index.qmd  styles.css
tutorial/: _quarto.yml  index.html  index.qmd  search.json  styles.css  temp.py
(+39 files in other folders)
