[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "front"
version = "0.1.0"
description = "Streamlit frontend for the DS223 group project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "streamlit>=1.56.0",
]

[tool.setuptools]
py-modules = ["bandit_utils"]
